# orateur

./: .gitignore  README.md  install.sh  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  desktop-build.yml  docs.yml  release.yml  reusable-verify.yml  semantic_release.yml
config/: orateur.service
desktop/: .env.example  .gitignore  CONTROL.md  README.md  index.html  package-lock.json  package.json
desktop/src/: App.css  App.tsx  OrateurInstallGate.tsx  debug.ts  orateurState.ts  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/resources/: orateur-pip-spec.txt
desktop/src-tauri/src/: daemon.rs  env_check.rs  lib.rs  macos_overlay_panel.rs  main.rs  orateur_config.rs  overlay_workspace.rs  tray.rs
desktop/src/components/: Waveform.css  Waveform.tsx
desktop/src/settings/: SettingsPanel.tsx  ShortcutRecorder.tsx  orateurDefaults.ts
docs/: CHANGELOG.md  github-pages-setup.md  index.md  reference.md
scripts/: install.sh  sync_version_for_release.py  verify_release_wheel.py
src/orateur/: __init__.py  _cuda_env.py  audio_capture.py  audio_utils.py  cli.py  config.py  install_stt.py  log.py  main.py  paths.py  shortcuts.py  sts_pipeline.py  text_injector.py  ui_daemon.py  ui_mirror.py
src/orateur/llm/: __init__.py  base.py  mcp.py  mcp_tools.py  ollama.py  registry.py
src/orateur/stt/: __init__.py  base.py  pywhispercpp.py  registry.py
src/orateur/tts/: __init__.py  base.py  pocket_tts.py  registry.py
