[project]
name = "orateur"
version = "0.1.1"
description = "Minimal local speech-to-text and speech-to-speech"
readme = "README.md"
authors = [
    { name="Antoine" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "pyperclip>=1.8.2",
    "sounddevice>=0.4.6",
    "numpy>=1.21.0",
    "scipy>=1.10.0",
    "evdev>=1.6.0; sys_platform == 'linux'",
    "pynput>=1.7.0; sys_platform == 'darwin' or sys_platform == 'win32'",
    "pywhispercpp>=1.4.0",
    "pocket-tts>=0.1.0",
    "ollama>=0.3.0",
    "mcp[cli]>=1.0.0",
    "psutil>=5.8.0",
    "rich>=13.0.0",
]

[project.scripts]
orateur = "orateur.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orateur"]

[tool.hatch.build.targets.sdist]
packages = ["src/orateur"]
