[project]
name = "orateur"
version = "0.2.0"
description = "Minimal local speech-to-text and speech-to-speech"
readme = "README.md"
authors = [
    { name="Antoine" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dependencies = [
    "pyperclip>=1.8.2",
    "sounddevice>=0.4.6",
    "numpy>=1.21.0",
    "scipy>=1.10.0",
    "evdev>=1.6.0; sys_platform == 'linux'",
    "pynput>=1.7.0; sys_platform == 'darwin' or sys_platform == 'win32'",
    "pywhispercpp>=1.4.0",
    "pocket-tts>=0.1.0",
    "ollama>=0.3.0",
    "mcp[cli]>=1.0.0",
    "psutil>=5.8.0",
    "rich>=13.0.0",
]

[project.scripts]
orateur = "orateur.cli:main"

[dependency-groups]
dev = [
    "build>=1.2.0",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
    "pre-commit>=4.2.0",
    "python-semantic-release>=10.3.1",
    "ruff>=0.15.9",
    "ty>=0.0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B006"]
ignore = ["E203", "W293"]

[tool.ruff.lint.isort]
known-first-party = ["orateur"]

[tool.ruff.lint.per-file-ignores]
# Configure logging before importing sibling packages that may log on import.
"src/orateur/cli.py" = ["E402"]
"src/orateur/main.py" = ["E402"]
"src/orateur/sts_pipeline.py" = ["E402"]

[tool.ty.src]
include = ["src"]

[tool.ty.environment]
root = ["./src"]

[tool.ty.analysis]
# Optional dependency on non-Linux platforms (see project optional deps).
allowed-unresolved-imports = ["pynput.**"]

# Omit explicit hatch `packages` paths: `python -m build` builds the wheel from the sdist, where
# sources live as `orateur/…` (not `src/orateur`), so a `src/orateur` override yields an empty wheel.

[tool.semantic_release]
assets = ["uv.lock"]
# Skip `uv sync`: full install pulls torch/CUDA; `python -m build` only needs hatchling (isolated env).
build_command = """
pip install uv build
python scripts/sync_version_for_release.py "$NEW_VERSION"
uv lock --upgrade-package "$PACKAGE_NAME"
pip install --upgrade pip
python -m build
python scripts/verify_release_wheel.py
tar -czf quickshell-orateur.tar.gz quickshell
cp scripts/install.sh install.sh
sed -i "s/^DEFAULT_ORATEUR_VERSION=\"\"/DEFAULT_ORATEUR_VERSION=\"$NEW_VERSION\"/" install.sh
"""
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "conventional"
logging_use_named_masks = false
major_on_zero = true
allow_zero_version = true
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.branches."test releases"]
match = "test\\/.*"
prerelease_token = "rc"
prerelease = true

[tool.semantic_release.changelog]
template_dir = "docs/templates"

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = true
lstrip_blocks = true
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = false

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "hotfix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = [
    "fix",
    "hotfix",
    "perf",
    "build",
    "chore",
    "ci",
    "docs",
    "style",
    "refactor",
    "test",
]
default_bump_level = 0

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
# Applied by `semantic-release publish` (invoked after `version` in .github/workflows/semantic_release.yml).
dist_glob_patterns = [
    "dist/*",
    "install.sh",
    "quickshell-orateur.tar.gz",
    "bin/orateur",
]
upload_to_vcs_release = true
